# advent

./: .gitignore  Cargo.toml  README.md  build.rs  sample_day.rs
src/: main.rs
src/lib/: direction.rs  grid.rs  input.rs  mod.rs  pathfind.rs
src/years/: mod.rs
src/years/year2024/: day1.rs  day11.rs  day12.rs  day14.rs  day15.rs  day17.rs  day2.rs  day22.rs  day23.rs  day25.rs  day3.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
