[package]
name = "advent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "env"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
