[package]
name = "advent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
progress_bar = "1.4.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"

[features]
default = [
	"year2015", "year2016", "year2017",
	"year2018", "year2019", "year2020",
	"year2021", "year2022", "year2023",
	"year2024",
	"day1",  "day2",  "day3",  "day4",  "day5",
	"day6",  "day7",  "day8",  "day9",  "day10",
	"day11", "day12", "day13", "day14", "day15",
	"day16", "day17", "day18", "day19", "day20",
	"day21", "day22", "day23", "day24", "day25",
]
year2015 = []
year2016 = []
year2017 = []
year2018 = []
year2019 = []
year2020 = []
year2021 = []
year2022 = []
year2023 = []
year2024 = []
day1  = []
day2  = []
day3  = []
day4  = []
day5  = []
day6  = []
day7  = []
day8  = []
day9  = []
day10 = []
day11 = []
day12 = []
day13 = []
day14 = []
day15 = []
day16 = []
day17 = []
day18 = []
day19 = []
day20 = []
day21 = []
day22 = []
day23 = []
day24 = []
day25 = []

sample  = []
sample2 = []
part2   = []
